[stuck at QEMU logcat errors]

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DebuggingTutorial</string>
+    <string name="text">hello debugging!</string>
 </resources>
